# nimiq-multisig-cli

./: Cargo.toml  LICENSE  README.md  mywallet1.toml  mywallet2.toml  test1.toml  test2.toml
.github/workflows/: test.yml
cli/: Cargo.toml
cli/src/: config.rs  error.rs  lib.rs  main.rs  multisig.rs  private_key.rs  transaction.rs
cli/tests/: mod.rs
lib/: Cargo.toml
lib/src/: lib.rs  multisig.rs  public_key.rs  transaction.rs
src/: config.rs  error.rs  lib.rs  main.rs  multisig.rs  private_key.rs  public_key.rs  transaction.rs  transaction.rs_back  utils.rs
tests/: mod.rs
