[package]
name = "multisig-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multisig-lib = { path = "../lib" }
image = "0.24.7"
quircs = "0.10.0"
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs-albatross" }
nimiq-utils = { git = "https://github.com/nimiq/core-rs-albatross", features = ["key-rng", "merkle"] }
nimiq-primitives = { git = "https://github.com/nimiq/core-rs-albatross", features = ["coin", "networks"] }
nimiq-transaction = { git = "https://github.com/nimiq/core-rs-albatross" }
toml = "0.8.6"
serde = "1.0.132"
serde_derive = "1.0.132"
thiserror = "1.0.30"
base64 = "0.21.5"
rpassword = "7.2.0"
hex = "0.4.3"
curve25519-dalek = "4.1.1"
aes = "0.7.5"
block-modes	= "0.8.1"
byteorder = "1.3"
