[package]
name = "multisig-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multisig-lib = { path = "../lib" }
image = "0.24.7"
quircs = "0.10.0"
beserial = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat" }
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat" }
nimiq-utils = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat", features = ["key-rng", "merkle"] }
nimiq-primitives = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat", features = ["coin", "networks"] }
nimiq-transaction = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat" }
toml = "0.8.6"
serde = "1.0.190"
serde_derive = "1.0.190"
thiserror = "1.0.50"
base64 = "0.13.1"
rpassword = "7.2.0"
hex = "0.4.3"
curve25519-dalek = "3.2.0"
aes = "0.7.5"
block-modes	= "0.8.1"
