[package]
name = "multisig-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs-albatross" }
nimiq-utils = { git = "https://github.com/nimiq/core-rs-albatross", features = ["key-rng", "merkle"] }
nimiq-transaction = { git = "https://github.com/nimiq/core-rs-albatross" }
itertools = "0.11.0"
curve25519-dalek = "4.1.1"

# For WASM compatibility
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
wasm = [ 'getrandom' ]
