[package]
name = "multisig-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimiq-keys = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat" }
nimiq-utils = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat", features = ["key-rng", "merkle"] }
nimiq-transaction = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat" }
beserial = { git = "https://github.com/nimiq/core-rs-albatross", branch = "pow-tx-compat" }
itertools = "0.11.0"
curve25519-dalek = "3.2.0"

# For WASM compatibility
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
wasm = [ 'getrandom' ]
